fix column alignment problem, previously, div col was not functioning

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 .sidebar {
   width: 15%;
-  float: left;
+  float: right;
   font-size: xx-small;
   background-color: rgb(222, 248, 244);
 }
